<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="8dp"
    tools:context=".Header">

    <LinearLayout
        android:id="@+id/title_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="55"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#776e65"
            android:textStyle="bold" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_tip"
            android:textColor="#776e65" />

        <TextView
            android:id="@+id/how_to_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_play"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColorLink="#776e65" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="45">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.lengzhang.android.lz2048.Block
                android:id="@+id/block_step"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#bbada0"
                app:label="@string/step"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@id/empty_frame_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:value="0" />

            <FrameLayout
                android:id="@+id/empty_frame_1"
                android:layout_width="4dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/block_score"
                app:layout_constraintStart_toEndOf="@+id/block_step"
                app:layout_constraintTop_toTopOf="parent" />

            <com.lengzhang.android.lz2048.Block
                android:id="@+id/block_score"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#bbada0"
                app:label="@string/score"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@id/empty_frame_2"
                app:layout_constraintStart_toEndOf="@id/empty_frame_1"
                app:layout_constraintTop_toTopOf="parent"
                app:value="0" />

            <FrameLayout
                android:id="@+id/empty_frame_2"
                android:layout_width="4dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/block_best"
                app:layout_constraintStart_toEndOf="@+id/block_score"
                app:layout_constraintTop_toTopOf="parent" />

            <com.lengzhang.android.lz2048.Block
                android:id="@+id/block_best"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#bbada0"
                app:label="@string/best"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/empty_frame_2"
                app:layout_constraintTop_toTopOf="parent"
                app:value="0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/new_game_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            app:backgroundTint="#8f7a66"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>